Implement Calendar Skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>MTG Christmas Calendar 2023</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>MTG Christmas Calendar 2023</title>
+    <link rel="stylesheet" href="./main.css" />
+  </head>
+  <body>
+    <h1>MTG Advent Calendar 2023</h1>
 
-</body>
+    <section class="calendar">
+      <div class="door">1</div>
+      <div class="door">2</div>
+      <div class="door">3</div>
+      <div class="door">4</div>
+      <div class="door">5</div>
+      <div class="door">6</div>
+      <div class="door">7</div>
+      <div class="door">8</div>
+      <div class="door">9</div>
+      <div class="door">10</div>
+      <div class="door">11</div>
+      <div class="door">12</div>
+      <div class="door">13</div>
+      <div class="door">14</div>
+      <div class="door">15</div>
+      <div class="door">16</div>
+      <div class="door">17</div>
+      <div class="door">18</div>
+      <div class="door">19</div>
+      <div class="door">20</div>
+      <div class="door">21</div>
+      <div class="door">22</div>
+      <div class="door">23</div>
+      <div class="door">24</div>
+    </section>
+  </body>
 </html>
