Style Calendar Skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -9,30 +9,102 @@
     <h1>MTG Advent Calendar 2023</h1>
 
     <section class="calendar">
-      <div class="door">1</div>
-      <div class="door">2</div>
-      <div class="door">3</div>
-      <div class="door">4</div>
-      <div class="door">5</div>
-      <div class="door">6</div>
-      <div class="door">7</div>
-      <div class="door">8</div>
-      <div class="door">9</div>
-      <div class="door">10</div>
-      <div class="door">11</div>
-      <div class="door">12</div>
-      <div class="door">13</div>
-      <div class="door">14</div>
-      <div class="door">15</div>
-      <div class="door">16</div>
-      <div class="door">17</div>
-      <div class="door">18</div>
-      <div class="door">19</div>
-      <div class="door">20</div>
-      <div class="door">21</div>
-      <div class="door">22</div>
-      <div class="door">23</div>
-      <div class="door">24</div>
+      <div id="day-20" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">20</span>
+      </div>
+      <div id="day-3" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">3</span>
+      </div>
+      <div id="day-15" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">15</span>
+      </div>
+      <div id="day-23" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">23</span>
+      </div>
+      <div id="day-6" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">6</span>
+      </div>
+      <div id="day-2" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">2</span>
+      </div>
+      <div id="day-11" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">11</span>
+      </div>
+      <div id="day-7" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">7</span>
+      </div>
+      <div id="day-10" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">10</span>
+      </div>
+      <div id="day-13" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">13</span>
+      </div>
+      <div id="day-21" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">21</span>
+      </div>
+      <div id="day-16" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">16</span>
+      </div>
+      <div id="day-5" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">5</span>
+      </div>
+      <div id="day-17" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">17</span>
+      </div>
+      <div id="day-24" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">24</span>
+      </div>
+      <div id="day-1" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">1</span>
+      </div>
+      <div id="day-18" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">18</span>
+      </div>
+      <div id="day-9" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">9</span>
+      </div>
+      <div id="day-19" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">19</span>
+      </div>
+      <div id="day-12" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">12</span>
+      </div>
+      <div id="day-8" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">8</span>
+      </div>
+      <div id="day-22" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">22</span>
+      </div>
+      <div id="day-4" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">4</span>
+      </div>
+      <div id="day-14" class="door">
+        <figure class="hide"><img src="" alt="" /></figure>
+        <span class="day">14</span>
+      </div>
     </section>
   </body>
 </html>
