Implement door animations

--- a/src/index.html
+++ b/src/index.html
@@ -4,106 +4,112 @@
     <meta charset="UTF-8" />
     <title>MTG Christmas Calendar 2023</title>
     <link rel="stylesheet" href="./main.css" />
+    <script src="./main.js"></script>
   </head>
   <body>
     <h1>MTG Advent Calendar 2023</h1>
 
     <section class="calendar">
-      <div id="day-20" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">20</span>
+      <div id="day-20" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">20</span></div>
       </div>
-      <div id="day-3" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">3</span>
+      <div id="day-3" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">3</span></div>
       </div>
-      <div id="day-15" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">15</span>
+      <div id="day-15" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">15</span></div>
       </div>
-      <div id="day-23" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">23</span>
+      <div id="day-23" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">23</span></div>
       </div>
-      <div id="day-6" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">6</span>
+      <div id="day-6" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">6</span></div>
       </div>
-      <div id="day-2" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">2</span>
+      <div id="day-2" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">2</span></div>
       </div>
-      <div id="day-11" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">11</span>
+      <div id="day-11" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">11</span></div>
       </div>
-      <div id="day-7" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">7</span>
+      <div id="day-7" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">7</span></div>
       </div>
-      <div id="day-10" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">10</span>
+      <div id="day-10" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">10</span></div>
       </div>
-      <div id="day-13" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">13</span>
+      <div id="day-13" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">13</span></div>
       </div>
-      <div id="day-21" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">21</span>
+      <div id="day-21" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">21</span></div>
       </div>
-      <div id="day-16" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">16</span>
+      <div id="day-16" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">16</span></div>
       </div>
-      <div id="day-5" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">5</span>
+      <div id="day-5" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">5</span></div>
       </div>
-      <div id="day-17" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">17</span>
+      <div id="day-17" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">17</span></div>
       </div>
-      <div id="day-24" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">24</span>
+      <div id="day-24" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">24</span></div>
       </div>
-      <div id="day-1" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">1</span>
+      <div id="day-1" class="card">
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/e/b/ebafd1c7-c248-494c-b9b7-3521c6c4352c.jpg"
+            alt="Trying to cheat, eh?"
+          />
+        </figure>
+        <div class="door"><span class="day">1</span></div>
       </div>
-      <div id="day-18" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">18</span>
+      <div id="day-18" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">18</span></div>
       </div>
-      <div id="day-9" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">9</span>
+      <div id="day-9" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">9</span></div>
       </div>
-      <div id="day-19" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">19</span>
+      <div id="day-19" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">19</span></div>
       </div>
-      <div id="day-12" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">12</span>
+      <div id="day-12" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">12</span></div>
       </div>
-      <div id="day-8" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">8</span>
+      <div id="day-8" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">8</span></div>
       </div>
-      <div id="day-22" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">22</span>
+      <div id="day-22" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">22</span></div>
       </div>
-      <div id="day-4" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">4</span>
+      <div id="day-4" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">4</span></div>
       </div>
-      <div id="day-14" class="door">
-        <figure class="hide"><img src="" alt="" /></figure>
-        <span class="day">14</span>
+      <div id="day-14" class="card">
+        <figure><img src="" alt="" /></figure>
+        <div class="door"><span class="day">14</span></div>
       </div>
     </section>
   </body>
