Implement zoom animations

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <title>MTG Christmas Calendar 2023</title>
+    <meta charset="utf-8" lang="en" />
     <link rel="stylesheet" href="./main.css" />
     <script src="./main.js"></script>
   </head>
