--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,14 @@
     <title>MTG Christmas Calendar 2023</title>
     <meta charset="utf-8" lang="en" />
     <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./days.css" />
     <script src="./main.js"></script>
   </head>
   <body>
-    <h1>MTG Advent Calendar 2023</h1>
-
+    <div id="title-wrapper">
+      <div id="title"><h1>MTG Advent Calendar 2023</h1></div>
+      <button id="toggle-snow" title="Toggle Snow!">❅</button>
+    </div>
     <section class="calendar">
       <div id="day-20" class="card">
         <figure><img src="" alt="" /></figure>
@@ -73,8 +76,8 @@
       <div id="day-1" class="card">
         <figure>
           <img
-            src="https://cards.scryfall.io/large/front/e/b/ebafd1c7-c248-494c-b9b7-3521c6c4352c.jpg"
-            alt="Trying to cheat, eh?"
+            src="https://cards.scryfall.io/large/front/5/a/5a5841fa-4f30-495a-b840-3ef5a2af8fad.jpg"
+            alt=""
           />
         </figure>
         <div class="door"><span class="day">1</span></div>
@@ -112,5 +115,19 @@
         <div class="door"><span class="day">14</span></div>
       </div>
     </section>
+    <footer>
+      <span id="copyright"
+        >© 2023 <a href="https://ko-fi.com/squirrelbat">squirrel-bat</a></span
+      >
+      <p id="fan-content-policy">
+        "MTG Advent Calendar 2023" is unofficial Fan Content permitted under the
+        <a
+          href="https://company.wizards.com/en/legal/fancontentpolicy"
+          target="_blank"
+          >Fan Content Policy</a
+        >. Not approved/endorsed by Wizards.<br />Portions of the materials used
+        are property of Wizards of the Coast. © Wizards of the Coast LLC.
+      </p>
+    </footer>
   </body>
 </html>
