--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="title-wrapper">
       <div id="title"><h1>MTG Advent Calendar 2023</h1></div>
-      <button id="toggle-snow" title="Toggle Snow!">❅</button>
+      <button id="toggle-snow" class="frosted" title="Toggle Snow!">❅</button>
     </div>
     <section class="calendar">
       <div id="day-20" class="card">
