Add missing img alt string

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/5/a/5a5841fa-4f30-495a-b840-3ef5a2af8fad.jpg"
-            alt=""
+            alt="One with Nothing"
           />
         </figure>
         <div class="door"><span class="day">1</span></div>
