--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,12 @@
         <div class="door"><span class="day">6</span></div>
       </div>
       <div id="day-2" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/5/8/580fbbf8-ba7e-4889-a5ea-d066f3ea8cea.jpg"
+            alt="Splinter Twin"
+          />
+        </figure>
         <div class="door"><span class="day">2</span></div>
       </div>
       <div id="day-11" class="card">
