--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>MTG Christmas Calendar 2023</title>
+    <title>MTG Advent Calendar 2023</title>
     <meta charset="utf-8" lang="en" />
     <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./days.css" />
