Implement opened doors onload

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">24</span></div>
       </div>
-      <div id="day-1" class="card">
+      <div id="day-1" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/5/a/5a5841fa-4f30-495a-b840-3ef5a2af8fad.jpg"
