--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,12 @@
         <div class="door"><span class="day">20</span></div>
       </div>
       <div id="day-3" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/3/a/3a2d7cf9-dddb-4de3-b4f2-c52e3ec8fb4b.jpg"
+            alt="Brain Freeze"
+          />
+        </figure>
         <div class="door"><span class="day">3</span></div>
       </div>
       <div id="day-15" class="card">
@@ -55,7 +60,7 @@
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">6</span></div>
       </div>
-      <div id="day-2" class="card">
+      <div id="day-2" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/5/8/580fbbf8-ba7e-4889-a5ea-d066f3ea8cea.jpg"
