--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">20</span></div>
       </div>
-      <div id="day-3" class="card">
+      <div id="day-3" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/3/a/3a2d7cf9-dddb-4de3-b4f2-c52e3ec8fb4b.jpg"
@@ -139,7 +139,12 @@
         <div class="door"><span class="day">22</span></div>
       </div>
       <div id="day-4" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/5/9/59a118d1-30b8-42c0-ac42-6fba0778200a.jpg"
+            alt="Invigorating Hot Spring"
+          />
+        </figure>
         <div class="door"><span class="day">4</span></div>
       </div>
       <div id="day-14" class="card">
