--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>MTG Advent Calendar 2023</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" lang="en" />
     <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./days.css" />
@@ -94,7 +95,12 @@
         <div class="door"><span class="day">16</span></div>
       </div>
       <div id="day-5" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/3/1/316b1fd1-5ec4-4bdc-938b-cbace1bb3f42.jpg"
+            alt="Mayael the Anima"
+          />
+        </figure>
         <div class="door"><span class="day">5</span></div>
       </div>
       <div id="day-17" class="card">
@@ -138,7 +144,7 @@
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">22</span></div>
       </div>
-      <div id="day-4" class="card">
+      <div id="day-4" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/5/9/59a118d1-30b8-42c0-ac42-6fba0778200a.jpg"
