--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,13 @@
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">23</span></div>
       </div>
-      <div id="day-6" class="card">
-        <figure><img src="" alt="" /></figure>
+      <div id="day-6" class="card open">
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/b/a/ba1d0ac1-e805-4213-a46e-cf124680d082.jpg"
+            alt="Collected Conjuring"
+          />
+        </figure>
         <div class="door"><span class="day">6</span></div>
       </div>
       <div id="day-2" class="card open">
@@ -94,7 +99,7 @@
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">16</span></div>
       </div>
-      <div id="day-5" class="card">
+      <div id="day-5" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/3/1/316b1fd1-5ec4-4bdc-938b-cbace1bb3f42.jpg"
