--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">23</span></div>
       </div>
-      <div id="day-6" class="card open">
+      <div id="day-6" class="card">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/b/a/ba1d0ac1-e805-4213-a46e-cf124680d082.jpg"
