--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">23</span></div>
       </div>
-      <div id="day-6" class="card">
+      <div id="day-6" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/b/a/ba1d0ac1-e805-4213-a46e-cf124680d082.jpg"
@@ -80,7 +80,12 @@
         <div class="door"><span class="day">11</span></div>
       </div>
       <div id="day-7" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/c/f/cf2a5c2e-7fe1-45eb-b01c-891ab961186f.jpg"
+            alt="Griselbrand"
+          />
+        </figure>
         <div class="door"><span class="day">7</span></div>
       </div>
       <div id="day-10" class="card">
