Add day to opened doors

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
       <div id="day-20" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">20</span></div>
+        <div class="day-overlay">20</div>
       </div>
       <div id="day-3" class="card open">
         <figure>
@@ -48,14 +49,17 @@
           />
         </figure>
         <div class="door"><span class="day">3</span></div>
+        <div class="day-overlay">3</div>
       </div>
       <div id="day-15" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">15</span></div>
+        <div class="day-overlay">15</div>
       </div>
       <div id="day-23" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">23</span></div>
+        <div class="day-overlay">23</div>
       </div>
       <div id="day-6" class="card open">
         <figure>
@@ -65,6 +69,7 @@
           />
         </figure>
         <div class="door"><span class="day">6</span></div>
+        <div class="day-overlay">6</div>
       </div>
       <div id="day-2" class="card open">
         <figure>
@@ -74,10 +79,12 @@
           />
         </figure>
         <div class="door"><span class="day">2</span></div>
+        <div class="day-overlay">2</div>
       </div>
       <div id="day-11" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">11</span></div>
+        <div class="day-overlay">11</div>
       </div>
       <div id="day-7" class="card">
         <figure>
@@ -87,22 +94,27 @@
           />
         </figure>
         <div class="door"><span class="day">7</span></div>
+        <div class="day-overlay">7</div>
       </div>
       <div id="day-10" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">10</span></div>
+        <div class="day-overlay">10</div>
       </div>
       <div id="day-13" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">13</span></div>
+        <div class="day-overlay">13</div>
       </div>
       <div id="day-21" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">21</span></div>
+        <div class="day-overlay">21</div>
       </div>
       <div id="day-16" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">16</span></div>
+        <div class="day-overlay">16</div>
       </div>
       <div id="day-5" class="card open">
         <figure>
@@ -112,14 +124,17 @@
           />
         </figure>
         <div class="door"><span class="day">5</span></div>
+        <div class="day-overlay">5</div>
       </div>
       <div id="day-17" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">17</span></div>
+        <div class="day-overlay">17</div>
       </div>
       <div id="day-24" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">24</span></div>
+        <div class="day-overlay">24</div>
       </div>
       <div id="day-1" class="card open">
         <figure>
@@ -129,30 +144,37 @@
           />
         </figure>
         <div class="door"><span class="day">1</span></div>
+        <div class="day-overlay">1</div>
       </div>
       <div id="day-18" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">18</span></div>
+        <div class="day-overlay">18</div>
       </div>
       <div id="day-9" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">9</span></div>
+        <div class="day-overlay">9</div>
       </div>
       <div id="day-19" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">19</span></div>
+        <div class="day-overlay">19</div>
       </div>
       <div id="day-12" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">12</span></div>
+        <div class="day-overlay">12</div>
       </div>
       <div id="day-8" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">8</span></div>
+        <div class="day-overlay">8</div>
       </div>
       <div id="day-22" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">22</span></div>
+        <div class="day-overlay">22</div>
       </div>
       <div id="day-4" class="card open">
         <figure>
@@ -162,10 +184,12 @@
           />
         </figure>
         <div class="door"><span class="day">4</span></div>
+        <div class="day-overlay">4</div>
       </div>
       <div id="day-14" class="card">
         <figure><img src="" alt="" /></figure>
         <div class="door"><span class="day">14</span></div>
+        <div class="day-overlay">14</div>
       </div>
     </section>
     <footer>
