--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,15 @@
     <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+
+    <link rel="preload" href="./bite_0.svg" />
+    <link rel="preload" href="./bite_1.svg" />
+    <link rel="preload" href="./bite_2.svg" />
+    <link rel="preload" href="./bite_3.svg" />
+    <link rel="preload" href="./bite_4.svg" />
+    <link rel="preload" href="./bite_5.svg" />
+    <link rel="preload" href="./bite_6.svg" />
+    <link rel="preload" href="./bite_7.svg" />
   </head>
   <body>
     <div id="title-wrapper">
@@ -86,7 +95,7 @@
         <div class="door"><span class="day">11</span></div>
         <div class="day-overlay">11</div>
       </div>
-      <div id="day-7" class="card">
+      <div id="day-7" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/c/f/cf2a5c2e-7fe1-45eb-b01c-891ab961186f.jpg"
@@ -167,7 +176,12 @@
         <div class="day-overlay">12</div>
       </div>
       <div id="day-8" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/8/e/8ed908d6-6d06-4ccb-9577-37ef2d01c1a5.jpg"
+            alt="Orcish Librarian"
+          />
+        </figure>
         <div class="door"><span class="day">8</span></div>
         <div class="day-overlay">8</div>
       </div>
