--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,12 @@
         <div class="day-overlay">18</div>
       </div>
       <div id="day-9" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/e/7/e70b7a73-484e-48f1-944c-3d38866cdc20.jpg"
+            alt="Nine Lives"
+          />
+        </figure>
         <div class="door"><span class="day">9</span></div>
         <div class="day-overlay">9</div>
       </div>
@@ -175,7 +180,7 @@
         <div class="door"><span class="day">12</span></div>
         <div class="day-overlay">12</div>
       </div>
-      <div id="day-8" class="card">
+      <div id="day-8" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/8/e/8ed908d6-6d06-4ccb-9577-37ef2d01c1a5.jpg"
