--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,12 @@
         <div class="day-overlay">7</div>
       </div>
       <div id="day-10" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/4/0/401f7042-24fd-42a0-ae7c-e6b7de1aa446.jpg"
+            alt="Maze's End"
+          />
+        </figure>
         <div class="door"><span class="day">10</span></div>
         <div class="day-overlay">10</div>
       </div>
@@ -160,7 +165,7 @@
         <div class="door"><span class="day">18</span></div>
         <div class="day-overlay">18</div>
       </div>
-      <div id="day-9" class="card">
+      <div id="day-9" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/e/7/e70b7a73-484e-48f1-944c-3d38866cdc20.jpg"
