--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,12 @@
         <div class="day-overlay">2</div>
       </div>
       <div id="day-11" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/5/e/5e3b1317-f024-4e34-89ad-538fc148cd5c.jpg"
+            alt="Infernius Spawnington III, Esq."
+          />
+        </figure>
         <div class="door"><span class="day">11</span></div>
         <div class="day-overlay">11</div>
       </div>
@@ -105,7 +110,7 @@
         <div class="door"><span class="day">7</span></div>
         <div class="day-overlay">7</div>
       </div>
-      <div id="day-10" class="card">
+      <div id="day-10" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/4/0/401f7042-24fd-42a0-ae7c-e6b7de1aa446.jpg"
