--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,12 @@
         <div class="day-overlay">10</div>
       </div>
       <div id="day-13" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/6/7/6750e203-1215-4203-b5b8-3f1b18940839.jpg"
+            alt="Triskaidekaphile"
+          />
+        </figure>
         <div class="door"><span class="day">13</span></div>
         <div class="day-overlay">13</div>
       </div>
@@ -176,7 +181,7 @@
         <div class="door"><span class="day">19</span></div>
         <div class="day-overlay">19</div>
       </div>
-      <div id="day-12" class="card">
+      <div id="day-12" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/e/5/e5a412b9-5cab-486f-a0d3-3f73b33b93ca.jpg"
