--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
         <div class="door"><span class="day">10</span></div>
         <div class="day-overlay">10</div>
       </div>
-      <div id="day-13" class="card">
+      <div id="day-13" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/6/7/6750e203-1215-4203-b5b8-3f1b18940839.jpg"
@@ -217,7 +217,12 @@
         <div class="day-overlay">4</div>
       </div>
       <div id="day-14" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/8/1/81875876-c1a0-4f64-8dfc-39217b5e4020.jpg"
+            alt="Fractured Sanity"
+          />
+        </figure>
         <div class="door"><span class="day">14</span></div>
         <div class="day-overlay">14</div>
       </div>
