--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,12 @@
         <div class="day-overlay">3</div>
       </div>
       <div id="day-15" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/0/e/0ee79399-715c-4c46-9fa1-e76b1087f009.jpg"
+            alt="Halo Fountain"
+          />
+        </figure>
         <div class="door"><span class="day">15</span></div>
         <div class="day-overlay">15</div>
       </div>
@@ -216,7 +221,7 @@
         <div class="door"><span class="day">4</span></div>
         <div class="day-overlay">4</div>
       </div>
-      <div id="day-14" class="card">
+      <div id="day-14" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/8/1/81875876-c1a0-4f64-8dfc-39217b5e4020.jpg"
