--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         <div class="door"><span class="day">3</span></div>
         <div class="day-overlay">3</div>
       </div>
-      <div id="day-15" class="card">
+      <div id="day-15" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/0/e/0ee79399-715c-4c46-9fa1-e76b1087f009.jpg"
@@ -132,7 +132,12 @@
         <div class="day-overlay">21</div>
       </div>
       <div id="day-16" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/2/1/212e3edb-62f1-4680-884f-70323547f8ad.jpg"
+            alt="Draco"
+          />
+        </figure>
         <div class="door"><span class="day">16</span></div>
         <div class="day-overlay">16</div>
       </div>
