--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
         <div class="door"><span class="day">21</span></div>
         <div class="day-overlay">21</div>
       </div>
-      <div id="day-16" class="card">
+      <div id="day-16" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/2/1/212e3edb-62f1-4680-884f-70323547f8ad.jpg"
@@ -152,7 +152,12 @@
         <div class="day-overlay">5</div>
       </div>
       <div id="day-17" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/7/c/7c458a0f-0e63-417f-b51e-8491822835b0.jpg"
+            alt="Synapse Sliver"
+          />
+        </figure>
         <div class="door"><span class="day">17</span></div>
         <div class="day-overlay">17</div>
       </div>
