--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
         <div class="door"><span class="day">5</span></div>
         <div class="day-overlay">5</div>
       </div>
-      <div id="day-17" class="card">
+      <div id="day-17" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/7/c/7c458a0f-0e63-417f-b51e-8491822835b0.jpg"
@@ -177,7 +177,12 @@
         <div class="day-overlay">1</div>
       </div>
       <div id="day-18" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/c/5/c52d66db-5570-48a1-99cf-e0417517747b.jpg"
+            alt="Fervent Champion"
+          />
+        </figure>
         <div class="door"><span class="day">18</span></div>
         <div class="day-overlay">18</div>
       </div>
