--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
         <div class="door"><span class="day">1</span></div>
         <div class="day-overlay">1</div>
       </div>
-      <div id="day-18" class="card">
+      <div id="day-18" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/c/5/c52d66db-5570-48a1-99cf-e0417517747b.jpg"
@@ -197,7 +197,12 @@
         <div class="day-overlay">9</div>
       </div>
       <div id="day-19" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/7/b/7b215968-93a6-4278-ac61-4e3e8c3c3943.jpg"
+            alt="Nicol Bolas, the Arisen"
+          />
+        </figure>
         <div class="door"><span class="day">19</span></div>
         <div class="day-overlay">19</div>
       </div>
