--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,12 @@
     </div>
     <section class="calendar">
       <div id="day-20" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/0/0/00cb17a0-5a13-4d02-b7fb-f99531bc8ca5.jpg"
+            alt="Dark Depths"
+          />
+        </figure>
         <div class="door"><span class="day">20</span></div>
         <div class="day-overlay">20</div>
       </div>
@@ -196,7 +201,7 @@
         <div class="door"><span class="day">9</span></div>
         <div class="day-overlay">9</div>
       </div>
-      <div id="day-19" class="card">
+      <div id="day-19" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/7/b/7b215968-93a6-4278-ac61-4e3e8c3c3943.jpg"
