--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <button id="toggle-snow" class="frosted" title="Toggle Snow!">❄</button>
     </div>
     <section class="calendar">
-      <div id="day-20" class="card">
+      <div id="day-20" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/0/0/00cb17a0-5a13-4d02-b7fb-f99531bc8ca5.jpg"
@@ -132,7 +132,12 @@
         <div class="day-overlay">13</div>
       </div>
       <div id="day-21" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/a/2/a2ee9127-d007-48e8-b797-88ef72bc7c8b.jpg"
+            alt="Savannah Lions"
+          />
+        </figure>
         <div class="door"><span class="day">21</span></div>
         <div class="day-overlay">21</div>
       </div>
