--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
         <div class="door"><span class="day">13</span></div>
         <div class="day-overlay">13</div>
       </div>
-      <div id="day-21" class="card">
+      <div id="day-21" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/a/2/a2ee9127-d007-48e8-b797-88ef72bc7c8b.jpg"
@@ -237,7 +237,12 @@
         <div class="day-overlay">8</div>
       </div>
       <div id="day-22" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/7/8/78efee5c-970c-4f9b-9a6b-96ef3e79caaa.jpg"
+            alt="Burning-Tree Emissary"
+          />
+        </figure>
         <div class="door"><span class="day">22</span></div>
         <div class="day-overlay">22</div>
       </div>
