--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,12 @@
         <div class="day-overlay">15</div>
       </div>
       <div id="day-23" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/4/5/45de923f-fdab-460c-96f4-f62aefa9ad73.jpg"
+            alt="Prophet of Kruphix"
+          />
+        </figure>
         <div class="door"><span class="day">23</span></div>
         <div class="day-overlay">23</div>
       </div>
@@ -236,7 +241,7 @@
         <div class="door"><span class="day">8</span></div>
         <div class="day-overlay">8</div>
       </div>
-      <div id="day-22" class="card">
+      <div id="day-22" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/7/8/78efee5c-970c-4f9b-9a6b-96ef3e79caaa.jpg"
