--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
         <div class="door"><span class="day">15</span></div>
         <div class="day-overlay">15</div>
       </div>
-      <div id="day-23" class="card">
+      <div id="day-23" class="card open">
         <figure>
           <img
             src="https://cards.scryfall.io/large/front/4/5/45de923f-fdab-460c-96f4-f62aefa9ad73.jpg"
@@ -177,7 +177,12 @@
         <div class="day-overlay">17</div>
       </div>
       <div id="day-24" class="card">
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <img
+            src="https://cards.scryfall.io/large/front/a/7/a70cb6d9-3955-4064-917b-11dec26440c5.jpg"
+            alt="The World Tree"
+          />
+        </figure>
         <div class="door"><span class="day">24</span></div>
         <div class="day-overlay">24</div>
       </div>
