--- a/src/index.html
+++ b/src/index.html
@@ -279,7 +279,8 @@
     </section>
     <footer>
       <span id="copyright"
-        >© 2023 <a href="https://ko-fi.com/squirrelbat">squirrel-bat</a></span
+        >© 2023 - present
+        <a href="https://ko-fi.com/squirrelbat">squirrel-bat</a></span
       >
       <p id="fan-content-policy">
         "MTG Advent Calendar 2023" is unofficial Fan Content permitted under the
